Updating styles to fix room center panel spacing and alignment

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -87,25 +87,9 @@
   display: flex;
   flex-direction: column;
   flex: 5;
+  flex-wrap: wrap;
 }
 
-.piles-top {
-  display: flex;
-  flex-direction: row;
-  flex: 1;
-  justify-content: space-around;
-  padding: 3% 1% 1%;
-
-}
-
-.piles-bottom {
-  display: flex;
-  flex-direction: row;
-  flex: 1;
-  justify-content: space-around;
-  padding: 1% 1% 3%;
-
-}
 
 .bottom-center-panel {
   display: flex;
@@ -113,12 +97,6 @@
   height: 25%;
   width: 100%;
   justify-content: space-around;
-}
-
-.blank-card {
-  padding: 8% 5%;
-  box-shadow: 1px 1px 6px rgba(0,0,0,0.25);
-
 }
 
 
@@ -148,10 +126,15 @@ $card-idx: 1;
 @for $outer-idx from 1 to 60 {
   @for $inner-idx from 1 to 5 {
     .playingCards ul.deck li:nth-child(#{$card-idx}) {
-      left: #{$value * 2}px;
+      left: #{$value * 1.2}px;
       bottom: #{$value}px;
     }
     $card-idx: $card-idx + 1;
   }
   $value: $value + 2;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
